--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+  "node": "15.12.x"
+},
   "dependencies": {
     "express": "^4.16.1"
   }
