--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js"
   },
   "engines": {
-  "node": "15.12.x"
+  "node": "12.13.1"
 },
   "dependencies": {
     "express": "^4.16.1"
