--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js"
   },
   "engines": {
-  "node": "16.12.0"
+  "node": "^18"
 },
   "dependencies": {
     "express": "^4.16.1"
