--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "First Last <first.last@example.com>",
   "main": "server.js",
   "scripts": {
-    "build": "npm install"
+    "build": "npm install",
     "start": "node server.js"
   },
   "engines": {
